<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UIPart1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="change">Change Text</string>
    <string name="hint">Enter your name</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="accept">I Agree</string>
    <string name="newstr">My text</string>
    <string name="another_string">Another String</string>

</resources>